--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="hexadecimal">Hexadecimal:</label>
         <input type="text" id="hexadecimal" placeholder="Digite um valor hexadecimal">
 
-        <input type="button" value="Converter" onclick="converterBases()">
+        <!-- <input type="button" value="Converter" onclick="converterBases()"> -->
 
         <div id="resultado"></div>
     </form>
