--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div id="resultado"></div>
     </form>
 
+    <footer>Criado de &hearts; por <a target="_blank" href="https://instagram.com/arthurbat12.as">Arthur Batista</a></footer>
+
     <script src="script.js"></script>
 </body>
 </html>
